--- a/sample-packages/npm/package.json
+++ b/sample-packages/npm/package.json
@@ -1,3 +1,19 @@
 {
-  "your": "json config here"
+  "your": "json config here",
+  "name": "@lrogh/exo-publish-package",
+  "version": "1.0.0",
+  "description": "exo publish package",
+  "main": "index.js",
+  "scripts": {
+    "test": "exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lrogh/exo-publish-package.git"
+  },
+  "keywords": [
+    "publish"
+  ],
+  "author": "lrogh",
+  "license": "ISC"
 }
