--- a/sample-packages/npm/package.json
+++ b/sample-packages/npm/package.json
@@ -14,6 +14,9 @@
   "keywords": [
     "publish"
   ],
+  "publishConfig": {
+  "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
+  },
   "author": "lrogh",
   "license": "ISC"
 }
